# NeuralForge

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: engagement.yml  release.yml
src/: index.ts  server.ts
src/agent/: AgentManager.ts
ui/: package.json
ui/src/: App.tsx
