[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-forge"
version = "1.0.0"
description = "Visual AI Agent Builder with Self-Improving Local Agents"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Gracestack AB", email = "hello@gracestack.se"}
]
maintainers = [
    {name = "Gracestack AB", email = "hello@gracestack.se"}
]
keywords = [
    "ai",
    "agents", 
    "automation",
    "llm",
    "local-ai",
    "self-improving",
    "visual-builder",
    "workflow",
    "autonomous"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.15",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "click>=8.1.0",
    "rich>=13.6.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "schedule>=1.2.0",
    "croniter>=2.0.0",
    "psutil>=5.9.0",
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "speechrecognition>=3.10.0",
    "pydub>=0.25.0",
    "elevenlabs>=0.2.0",
    "discord.py>=2.3.0",
    "slack-sdk>=3.26.0",
    "telegram>=0.0.1",
    "python-telegram-bot>=20.6",
    "whatsapp-api>=0.3.0",
    "notion-client>=2.2.0",
    "google-api-python-client>=2.108.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "boto3>=1.29.0",
    "docker>=6.1.0",
    "kubernetes>=28.1.0",
    "gitpython>=3.1.0",
    "github-api>=1.59.0",
    "jira>=1.0.0",
    "trello>=2.0.0",
    "asana>=1.0.0",
    "homeassistant>=2023.10.0",
    "philips-hue>=4.0.0",
    "tesla-api>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pip-audit>=2.6.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-mermaid2-plugin>=1.1.0"
]
gpu = [
    "torch-audio>=2.1.0",
    "torchvision>=0.16.0",
    "faiss-gpu>=1.7.4",
    "cupy-cuda11x>=12.2.0",
    "nvidia-ml-py>=12.535.0"
]

[project.urls]
Homepage = "https://neuralforge.dev"
Documentation = "https://docs.neuralforge.dev"
Repository = "https://github.com/gracestack/NeuralForge"
"Bug Tracker" = "https://github.com/gracestack/NeuralForge/issues"
Changelog = "https://github.com/gracestack/NeuralForge/blob/main/CHANGELOG.md"
Discord = "https://discord.gg/neuralforge"
Twitter = "https://twitter.com/NeuralForgeAI"

[project.scripts]
neural-forge = "neural_forge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neural_forge*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
neural_forge = ["py.typed", "*.json", "*.yaml", "*.toml", "templates/**/*", "static/**/*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["neural_forge"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["neural_forge"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
